# crypto-hft-market-making-trading-profitable-system

./: .gitignore
cpp-multi-exchange/: CMakeLists.txt
cpp-multi-exchange/config/: config.json
cpp-single-exchange/src/: main.cpp
python-multi-exchange/: README.md  pyproject.toml
python-multi-exchange/src/: __init__.py  arbitrage_main.py
python-multi-exchange/src/arbitrage/: __init__.py  detector.py
python-multi-exchange/src/core/: __init__.py
python-multi-exchange/src/exchange/: __init__.py  binance.py
python-multi-exchange/src/orderbook/: consolidated.py
python-multi-exchange/src/risk/: manager.py
python-multi-exchange/src/strategy/: __init__.py  cross_exchange_mm.py
python-single-exchange/: pyproject.toml
python-single-exchange/src/: __init__.py  main.py
python-single-exchange/src/core/: __init__.py
python-single-exchange/src/exchange/: __init__.py
python-single-exchange/src/orderbook/: book.py
python-single-exchange/src/risk/: __init__.py
resources/: 0.todo.md  00_COMPLETE_SYSTEM_INDEX.txt  00_MASTER_README.txt  00_NEW_FOLDERS_SUMMARY.txt  FOLDERS_CREATED_SUMMARY.txt  README.md  generate_remaining_docs.sh
resources/advanced_optimization/: 00_README.txt  01_colocation_strategies.txt  02_fpga_acceleration.txt  03_hardware_acceleration.txt  04_kernel_bypass.txt  05_rdma_infiniband.txt  06_cpu_optimization.txt  07_memory_optimization.txt  08_network_optimization.txt  09_extreme_latency.txt  10_cost_benefit.txt
resources/ai/: feature_engineering.txt  machine_learning_for_hft.txt  model_deployment_cpp.txt  neural_networks_price_prediction.txt  reinforcement_learning_trading.txt
resources/backtest/: backtest_framework.txt  event_driven_backtesting.txt  historical_data_management.txt  performance_metrics.txt  slippage_and_transaction_costs.txt
resources/benchmarking/: 01_latency_benchmarking.txt  02_throughput_testing.txt  03_load_testing_frameworks.txt  04_stress_testing_scenarios.txt  05_capacity_planning.txt  06_performance_regression_testing.txt  07_real_world_scenario_simulation.txt  08_benchmark_data_results.txt  09_performance_slas_targets.txt  10_continuous_monitoring.txt  11_README_index.txt
resources/code_design/: 00_README_INDEX.txt  01_OOP_Design_Patterns_for_HFT.txt  02_Modern_CPP_Design_for_HFT.txt  03_Low_Latency_Design_Principles.txt  04_SOLID_Principles_for_HFT.txt  05_Trading_System_Design_Patterns.txt  06_Code_Organization_and_Architecture.txt  07_Interface_and_API_Design.txt  08_Error_Handling_and_Exception_Safety.txt  09_Template_Metaprogramming_for_Performance.txt  10_Best_Practices_and_Anti_Patterns.txt
resources/code_settings/: 03_clion_setup.txt
resources/compilation_build_run/: 00_README.txt  01_cmake_basics.txt  02_cmake_advanced.txt  03_compilers.txt  04_build_types.txt  05_linking.txt  06_running_system.txt  07_continuous_build.txt
resources/compliance_audit/: 01_trade_logging_audit_trails.txt  02_regulatory_compliance_mifid_dodd_frank.txt  03_record_keeping_retention.txt  04_compliance_reporting.txt  05_transaction_monitoring.txt  06_market_abuse_detection.txt  07_best_execution_monitoring.txt  08_compliance_testing_procedures.txt  09_audit_data_formats_storage.txt  10_regulatory_reporting_automation.txt  README.txt
resources/config/: database_config.txt  developer_config.txt  exchange_config.txt  logging_config.txt  network_config.txt  risk_config.txt  strategy_config.txt  system_config.txt  trader_config.txt
resources/cost_calculation/: 00_README.txt  01_development_costs.txt  02_infrastructure_costs.txt  03_software_licenses.txt  04_exchange_fees.txt  05_data_costs.txt  06_cloud_costs.txt  07_ai_token_costs.txt  08_operational_costs.txt  09_regulatory_costs.txt  10_insurance_costs.txt  11_total_tco.txt  12_roi_analysis.txt
resources/cpp-multi-exchange/: README.md
resources/cpp-single-exchange/: CMakeLists.txt  README.md
resources/cpp-single-exchange/config/: config.json
resources/cpp-single-exchange/include/core/: engine.hpp
resources/cpp-single-exchange/include/exchange/: binance_client.hpp
resources/cpp-single-exchange/include/risk/: risk_manager.hpp
resources/cpp-single-exchange/include/strategy/: market_maker.hpp
resources/cpp-single-exchange/include/utils/: config.hpp
resources/cpp-single-exchange/src/orderbook/: orderbook.cpp
resources/cpp-single-exchange/src/risk/: risk_manager.cpp
resources/cpp-single-exchange/src/strategy/: market_maker.cpp
resources/crypto_hft_system_design/: 00_README_complete_system_overview.txt  00_execution_engine.txt  00_risk_management_system.txt  01_system_architecture.txt  02_component_architecture.txt  03_data_flow_architecture.txt  04_codebase_folder_structure.txt  05_exchange_connector_framework.txt  06_market_data_handler.txt  07_order_management_system.txt  10_position_manager.txt  11_strategy_engine.txt  12_binance_connector.txt  13_coinbase_connector.txt  14_kraken_connector.txt  15_ftx_connector_historical.txt  16_okx_connector.txt  17_bybit_connector.txt  18_huobi_connector.txt  19_kucoin_connector.txt  20_bitfinex_connector.txt  21_deribit_connector.txt  22_threading_model.txt  23_memory_management.txt  24_logging_and_monitoring.txt  25_configuration_management.txt  26_network_stack.txt  27_persistence_layer.txt  28_recovery_and_failover.txt  29_build_system.txt  30_dependencies.txt  31_testing_strategy.txt  32_deployment_guide.txt  33_performance_benchmarks.txt  INDEX_QUICK_REFERENCE.txt
resources/crypto_top_10_exchanges/: README.txt  binance.txt  bybit.txt  coinbase_pro.txt  kraken.txt  okx.txt
resources/daily_checks/: 00_README.txt  (+10 more)
rust-multi-exchange/: Cargo.toml
rust-multi-exchange/src/: lib.rs  main.rs
rust-multi-exchange/src/strategy/: mod.rs
rust-single-exchange/: Cargo.toml  README.md
rust-single-exchange/src/: benchmark.rs  lib.rs  main.rs
rust-single-exchange/src/core/: engine.rs  memory.rs  mod.rs  queue.rs  types.rs
rust-single-exchange/src/orderbook/: book.rs
rust-single-exchange/src/risk/: mod.rs
rust-single-exchange/src/strategy/: mod.rs
rust-single-exchange/src/utils/: config.rs  mod.rs
(+530 files in other folders)
