[project]
name = "crypto-hft-multi-exchange"
version = "1.0.0"
description = "Multi-Exchange Crypto HFT Market Making Bot"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "orjson>=3.9.0",
    "sortedcontainers>=2.4.0",
    "structlog>=23.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "asyncio-throttle>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
]

[project.scripts]
multi-exchange-mm = "src.main:main"
arbitrage-bot = "src.arbitrage_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
