[package]
name = "crypto-hft-multi-exchange"
version = "1.0.0"
edition = "2021"
authors = ["HFT Developer"]
description = "Multi-exchange HFT market making system with cross-exchange arbitrage"

[lib]
name = "hft_multi"
path = "src/lib.rs"

[[bin]]
name = "multi-exchange-mm"
path = "src/main.rs"

[[bin]]
name = "arbitrage-bot"
path = "src/arbitrage_main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"
hashbrown = "0.14"
ordered-float = "4.2"
rust_decimal = "1.33"
clap = { version = "4.4", features = ["derive"] }
async-trait = "0.1"
dashmap = "5.5"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
