[package]
name = "crypto-hft-market-maker"
version = "1.0.0"
edition = "2021"
authors = ["HFT Developer"]
description = "High-frequency trading market making system for cryptocurrency exchanges"
license = "MIT"

[lib]
name = "hft"
path = "src/lib.rs"

[[bin]]
name = "market-maker"
path = "src/main.rs"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "macros", "sync", "time"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto for signing
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
crossbeam = "0.8"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Data structures
hashbrown = "0.14"
ordered-float = "4.2"

# Numeric
rust_decimal = "1.33"
rust_decimal_macros = "1.33"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Metrics
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
mockall = "0.12"

[[bench]]
name = "orderbook_bench"
harness = false

[[bench]]
name = "strategy_bench"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
